--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 .page-wrapper {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   padding: 0;
   margin: 0;
+  background: rgb(211, 93, 14);
 }
 
 .container {
@@ -11,6 +12,11 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+}
+
+.pokeapi-icon{
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
 
 .row-search {
